# authorization-app

./: .gitignore  Cargo.toml  Dockerfile
authz-api/: Cargo.toml
authz-api/src/: lib.rs
authz-api/src/router/: mod.rs  permissions.rs  policies.rs  resources.rs  roles.rs  scopes.rs  starter.rs  users.rs
authz-core/: Cargo.toml
authz-core/src/: app_config.rs  lib.rs
authz-dto/: Cargo.toml
authz-dto/src/: claims.rs  create_user_dto.rs  lib.rs  update_user_dto.rs
authz-entity/: Cargo.toml
authz-entity/src/: lib.rs  permission.rs  permission_policy.rs  permission_scope.rs  policy.rs  resource.rs  resource_scope.rs  role.rs  role_policy.rs  scope.rs  user.rs  user_role.rs
authz-jwt/: Cargo.toml
authz-jwt/src/: lib.rs
authz-migration/: Cargo.toml
authz-service/: Cargo.toml
authz-service/src/: lib.rs
src/: main.rs
